--- a/src/less/style.less
+++ b/src/less/style.less
@@ -111,7 +111,7 @@ footer,nav {
 			width: 100%;
 			float: left;
 			height: @footerH;
-			a {
+			a,.nav-btn {
 				line-height: @footerH;
 				color: #fff;
 				font-size: 0.6rem;
