--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,6 @@
 * {
 	margin: 0;
-	padding: 0;
+	padding: 0; 
 }
 html,body {
 	width: 100VW;
@@ -71,7 +71,41 @@ header {
 			}
 		}
 	}
+	.findA {
+		font-size: 0.625rem;
+		color: #333;
+		line-height: 1.2rem;
+		padding: 0 0 0.5rem;
+		margin: 0 0.5rem;
+		display: inline-block;
+		&.router-link-active{
+			border-bottom: 2px solid #333;
+		}
+	}
 }
+.child {
+	height: 300px;
+	color: #fff;
+	padding: 20px;
+}
+.child.one {
+	background: yellow;
+}
+.child.two {
+	background: lightblue;
+}
+.child.three {
+	background: pink;
+}
+.child.four {
+	background: #fff;
+}
+.child.five {
+	background: lightgreen;
+}
+
+
+
 #carousel {
 	width: 100VW;
 	padding-top: @headerH;
