--- a/src/less/banner.less
+++ b/src/less/banner.less
@@ -7,14 +7,25 @@
 	}
 }
 .swiper-button-next, .swiper-container-rtl .swiper-button-prev {
-	background-size : 30px 30px;
+	background-size : 20px 20px;
 	margin:auto;
 }
 .swiper-button-next.swiper-button-disabled, .swiper-button-prev.swiper-button-disabled {
-	background-size : 30px 30px;
+	background-size : 20px 20px;
 	margin:auto;
 }
 .swiper-button-prev, .swiper-container-rtl .swiper-button-next {
-	background-size : 30px 30px;
+	background-size : 20px 20px;
 	margin:auto;
 }
+.swiper-pagination,.swiper-pagination-bullets {
+	.swiper-pagination-bullet {
+		width: 12px;
+		height: 4px;
+		border-radius : 2px;
+	}
+	.swiper-pagination-bullet-active {
+	
+	}
+}
+ 
