--- a/src/less/style.less
+++ b/src/less/style.less
@@ -31,7 +31,7 @@ header {
 	background: #fff;
 	h3 {
 		height: @headerH;
-		line-height: @headerH;
+		line-height: 4.125rem;
 		font-size: @defaultF;
 		color: #000;
 		text-align: center;
@@ -88,6 +88,17 @@ header {
 	color: #fff;
 	padding: 20px;
 }
+.sub {
+	height: 100px;
+	width: 100px;
+	padding: 10px;
+}
+.sub.one {
+	background: lightgreen;
+}
+.sub.two {
+	background: pink;
+}
 .child.one {
 	background: yellow;
 }
@@ -98,7 +109,7 @@ header {
 	background: pink;
 }
 .child.four {
-	background: #fff;
+	background: lightgrey;
 }
 .child.five {
 	background: lightgreen;
